<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_characters_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/filter_characters_name_edit_text_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_for_chip_group_character_status" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_characters_status_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_status_alive_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_status_alive_chip_text"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_status_dead_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_status_dead_chip_text"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_status_unknown_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_status_unknown_chip_text"
                android:checkable="true"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_characters_species_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/filter_characters_species_edit_text_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_characters_type_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/filter_characters_type_edit_text_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_for_chip_group_character_gender" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_characters_gender_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_gender_female_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_gender_female_chip_text"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_gender_male_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_gender_male_chip_text"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_gender_genderless_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_gender_genderless_chip_text"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_characters_gender_unknown_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_characters_gender_unknown_chip_text"
                android:checkable="true"/>

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>